add separate {VoIP,CBR}servers

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -86,7 +86,7 @@ extends=Base
 *.ue*[*].numUdpApps = 1
 
 **.ueCell[*].udpApp[0].typename = "UDPBasicApp"
-**.ueCell[*].udpApp[0].destAddresses = "server"
+**.ueCell[*].udpApp[0].destAddresses = "VoIPServer"
 **.ueCell[*].udpApp[0].destPort = 1000
 **.ueCell[*].udpApp[0].sendInterval = 0.0005s # 2 packets per TTI = full buffer
 **.ueCell[*].udpApp[0].messageLength = 50B  # <576B from RFC1122
@@ -101,8 +101,8 @@ extends=Base
 **.ueD2DRx[*].udpApp[0].typename = "UDPSink"
 **.ueD2DRx[*].udpApp[0].localPort = 1000
 
-**.server.udpApp[0].typename = "UDPSink"
-**.server.udpApp[0].localPort = 1000
+**.VoIPServer.udpApp[0].typename = "UDPSink"
+**.VoIPServer.udpApp[0].localPort = 1000
 
 
 ### UDP VOICE-OVER-IP TRAFFIC ###
@@ -113,7 +113,7 @@ extends = Base
 *.ueCell[*].udpApp[*].typename = "VoIPSender"
 *.ueCell[*].udpApp[*].localPort = 3088+ancestorIndex(0) 
 *.ueCell[*].udpApp[*].startTime = uniform(0s,0.02s)
-*.ueCell[*].udpApp[*].destAddress = "server"
+*.ueCell[*].udpApp[*].destAddress = "VoIPServer"
 *.ueCell[*].udpApp[*].destPort = 1000
 
 *.ueD2DTx[*].udpApp[*].typename = "VoIPSender"
@@ -124,42 +124,42 @@ extends = Base
 # Receivers
 *.ueD2DRx[*].udpApp[*].typename = "VoIPReceiver"
 *.ueD2DRx[*].udpApp[*].localPort = 1000
-**.server.udpApp[0].typename = "VoIPReceiver"
-**.server.udpApp[0].localPort = 1000
+**.VoIPServer.udpApp[0].typename = "VoIPReceiver"
+**.VoIPServer.udpApp[0].localPort = 1000
 
 *.ueD2DTx[*].lteNic.d2dPeerAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
 *.ueD2DRx[*].lteNic.d2dPeerAddresses = "ueD2DTx[" + string(ancestorIndex(1)) + "]"
 
+# Mixed traffic: VoIP + CBR, both D2D and cellular.
 [Config TrafficMixed]
 extends = Base
 *.numUeCell = 5
-*.numUeD2DTx = 5
-*.numUeD2DRx = 5
-**.deployer.numRbDl = 50
-**.deployer.numRbUl = 50
-**.numBands = 50
+*.numUeD2DTx = 4
+*.numUeD2DRx = 4
 
 # 3 VoIP senders.
 *.ueCell[*].numUdpApps = 1
 *.ueCell[0..2].udpApp[0].typename = "VoIPSender"
 *.ueCell[0..2].udpApp[0].localPort = 3088+ancestorIndex(0) 
 *.ueCell[0..2].udpApp[0].startTime = uniform(0s,0.02s)
-*.ueCell[0..2].udpApp[0].destAddress = "server"
-*.ueCell[0..2].udpApp[0].destPort = 1001
-
+*.ueCell[0..2].udpApp[0].destAddress = "VoIPServer"
+*.ueCell[0..2].udpApp[0].destPort = 1000
+#
 # 2 CBR users.
 **.ueCell[3..4].udpApp[0].typename = "UDPBasicApp"
-**.ueCell[3..4].udpApp[0].destAddresses = "server"
+**.ueCell[3..4].udpApp[0].destAddresses = "CBRServer"
 **.ueCell[3..4].udpApp[0].destPort = 1000
-**.ueCell[3..4].udpApp[0].sendInterval = 0.2s 
+**.ueCell[3..4].udpApp[0].sendInterval = 0.25s 
 **.ueCell[3..4].udpApp[0].messageLength = 50B # 2kbps
 
-# Server as endpoint.
-**.server.numUdpApps = 2
-**.server.udpApp[0].typename = "UDPSink"
-**.server.udpApp[0].localPort = 1000
-**.server.udpApp[1].typename = "VoIPReceiver"
-**.server.udpApp[1].localPort = 1001
+# VoIPServer as endpoint.
+**.VoIPServer.numUdpApps = 1
+**.VoIPServer.udpApp[0].typename = "VoIPReceiver"
+**.VoIPServer.udpApp[0].localPort = 1000
+# CBRServer as endpoint. One server with >1 UDPApps crashes.
+**.CBRServer.numUdpApps = 1
+**.CBRServer.udpApp[0].typename = "UDPSink"
+**.CBRServer.udpApp[0].localPort = 1000
 
 # 3 D2D VoIP users.
 *.ueD2DTx[*].numUdpApps = 1
@@ -174,14 +174,14 @@ extends = Base
 *.ueD2DRx[0..2].udpApp[*].localPort = 1000
 
 # 2 D2D CBR users.
-**.ueD2DTx[3..4].udpApp[0].typename = "UDPBasicApp"
-**.ueD2DTx[3..4].udpApp[0].destAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
-**.ueD2DTx[3..4].udpApp[0].destPort = 1000
-**.ueD2DTx[3..4].udpApp[0].sendInterval = 0.2s 
-**.ueD2DTx[3..4].udpApp[0].messageLength = 50B # 2kbps
+**.ueD2DTx[3].udpApp[0].typename = "UDPBasicApp"
+**.ueD2DTx[3].udpApp[0].destAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
+**.ueD2DTx[3].udpApp[0].destPort = 1000
+**.ueD2DTx[3].udpApp[0].sendInterval = 1s 
+**.ueD2DTx[3].udpApp[0].messageLength = 250B # 2kbps
 
-**.ueD2DRx[3..4].udpApp[0].typename = "UDPSink"
-**.ueD2DRx[3..4].udpApp[0].localPort = 1000
+**.ueD2DRx[3].udpApp[0].typename = "UDPSink"
+**.ueD2DRx[3].udpApp[0].localPort = 1000
 
 ### FTP VIA TCP TRAFFIC ###
 [Config TrafficTCPFTP]
@@ -403,6 +403,11 @@ extends = testRNGSeedInfluence
 
 [Config tuGameTest]
 extends = TrafficMixed
+
+**.deployer.numRbDl = 6
+**.deployer.numRbUl = 6
+**.numBands = 6
+
 **.schedulingDisciplineUl = "TU_GAME"
 **.schedulingDisciplineDl = "TU_GAME"
 
