redesigned network for easier config of CBR, VOIP, VID users

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -34,27 +34,37 @@ seed-set = ${repetition}
 
 ############### AMC MODULE PARAMETERS ###############
 **.rbAllocationType = "localized"
-# Five resources appears to be the minimum number to have sufficiently many TTIs.
-**.deployer.numRbDl = 6
-**.deployer.numRbUl = 6
-**.numBands = 6
 
 
 ### BASE CONFIGURATION ###
 [Config Base]
 network=FrequencyNetwork
 
+**.deployer.numRbDl = 6
+**.deployer.numRbUl = 6
+**.numBands = 6
+
 ### Number of UEs.
-*.numUeCell = 0
-*.numUeD2DTx = 2
-*.numUeD2DRx = 2
+*.numUeCellTx_CBR = 0
+*.numUeCellRx_CBR = 0
+*.numUeCellTx_VoIP = 0
+*.numUeCellRx_VoIP = 0
+*.numUeCellTx_vid = 0
+*.numUeCellRx_vid = 0
+
+*.numUeD2DTx_CBR = 0
+*.numUeD2DRx_CBR = 0
+*.numUeD2DTx_VoIP = 0
+*.numUeD2DRx_VoIP = 0
+*.numUeD2DTx_vid = 0
+*.numUeD2DRx_vid = 0
 
 ### Positioning.
 *.eNodeB.mobility.initialX = 300m
 *.eNodeB.mobility.initialY = 300m
 
-*.ue*[*].mobility.initialX = uniform(290m,310m)
-*.ue*[*].mobility.initialY = uniform(310m,330m)
+*.ue*[*].mobility.initialX = uniform(275m,325m)
+*.ue*[*].mobility.initialY = uniform(325m,375m)
 
 ### Default scheduling discipline.
 **.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
@@ -78,352 +88,139 @@ network=FrequencyNetwork
 **.usePreconfiguredTxParams = false
 #**.d2dCqi = 7
 
-
-### UDP FULL BUFFER TRAFFIC ###
-[Config TrafficUDPFullBuffer]
-extends=Base
-
 *.ue*[*].numUdpApps = 1
 
-**.ueCell[*].udpApp[0].typename = "UDPBasicApp"
-**.ueCell[*].udpApp[0].destAddresses = "VoIPServer"
-**.ueCell[*].udpApp[0].destPort = 1000
-**.ueCell[*].udpApp[0].sendInterval = 0.0005s # 2 packets per TTI = full buffer
-**.ueCell[*].udpApp[0].messageLength = 50B  # <576B from RFC1122
+# Cellular CBR senders.
+**.ueCellTx_CBR[*].udpApp[0].typename = "UDPBasicApp"
+**.ueCellTx_CBR[*].udpApp[0].destAddresses = "ueCellRx_CBR[" + string(ancestorIndex(1)) + "]"
+**.ueCellTx_CBR[*].udpApp[0].destPort = 1000
+**.ueCellTx_CBR[*].udpApp[0].sendInterval = ${cbrSendInterval = 0.2s}
+**.ueCellTx_CBR[*].udpApp[0].messageLength = ${cbrPacketSize = 50B} # 2kbps
+# Cellular CBR receivers.
+**.ueCellRx_CBR[*].udpApp[0].typename = "UDPSink"
+**.ueCellRx_CBR[*].udpApp[0].localPort = 1000
 
-**.ueD2DTx[*].udpApp[0].typename = "UDPBasicApp"
-**.ueD2DTx[*].udpApp[*].destAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
-**.ueD2DTx[*].lteNic.d2dPeerAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
-**.ueD2DTx[*].udpApp[0].destPort = 1000
-**.ueD2DTx[*].udpApp[0].sendInterval = 0.0005s # 2 packets per TTI = full buffer
-**.ueD2DTx[*].udpApp[0].messageLength = 50B  # <576B from RFC1122
+# Cellular VoIP senders.
+*.ueCellTx_VoIP[*].udpApp[0].typename = "VoIPSender"
+*.ueCellTx_VoIP[*].udpApp[0].localPort = 3088 
+*.ueCellTx_VoIP[*].udpApp[0].startTime = uniform(0s,0.02s)
+*.ueCellTx_VoIP[*].udpApp[0].destAddress = "ueCellRx_VoIP[" + string(ancestorIndex(1)) + "]"
+*.ueCellTx_VoIP[*].udpApp[0].destPort = 3000
+# Cellular VoIP receivers.
+*.ueCellRx_VoIP[*].udpApp[*].typename = "VoIPReceiver"
+*.ueCellRx_VoIP[*].udpApp[*].localPort = 3000
 
-**.ueD2DRx[*].udpApp[0].typename = "UDPSink"
-**.ueD2DRx[*].udpApp[0].localPort = 1000
+# Cellular video senders.
+**.ueCellTx_vid[*].udpApp[0].typename = "UDPBasicApp"
+**.ueCellTx_vid[*].udpApp[0].destAddresses = "ueCellRx_vid[" + string(ancestorIndex(1)) + "]"
+**.ueCellTx_vid[*].udpApp[0].destPort = 5000
+**.ueCellTx_vid[*].udpApp[0].sendInterval = 1s 
+**.ueCellTx_vid[*].udpApp[0].messageLength = 30250B # 242kbps
+# Cellular video receivers.
+**.ueCellRx_vid[*].udpApp[0].typename = "UDPSink"
+**.ueCellRx_vid[*].udpApp[0].localPort = 5000
 
-**.VoIPServer.udpApp[0].typename = "UDPSink"
-**.VoIPServer.udpApp[0].localPort = 1000
+
+# D2D CBR senders.
+**.ueD2DTx_CBR[*].udpApp[0].typename = "UDPBasicApp"
+**.ueD2DTx_CBR[*].udpApp[0].destAddresses = "ueD2DRx_CBR[" + string(ancestorIndex(1)) + "]"
+**.ueD2DTx_CBR[*].udpApp[0].destPort = 1000
+**.ueD2DTx_CBR[*].udpApp[0].sendInterval = ${cbrSendInterval}
+**.ueD2DTx_CBR[*].udpApp[0].messageLength = ${cbrPacketSize} # 2kbps
+# D2D CBR receivers.
+**.ueD2DRx_CBR[*].udpApp[0].typename = "UDPSink"
+**.ueD2DRx_CBR[*].udpApp[0].localPort = 1000
+
+# D2D VoIP senders.
+*.ueD2DTx_VoIP[*].udpApp[0].typename = "VoIPSender"
+*.ueD2DTx_VoIP[*].udpApp[0].localPort = 3088 
+*.ueD2DTx_VoIP[*].udpApp[0].startTime = uniform(0s,0.02s)
+*.ueD2DTx_VoIP[*].udpApp[0].destAddress = "ueD2DRx_VoIP[" + string(ancestorIndex(1)) + "]"
+*.ueD2DTx_VoIP[*].udpApp[0].destPort = 3000
+# D2D VoIP receivers.
+*.ueD2DRx_VoIP[*].udpApp[*].typename = "VoIPReceiver"
+*.ueD2DRx_VoIP[*].udpApp[*].localPort = 3000
+
+# D2D video senders.
+**.ueD2DTx_vid[*].udpApp[0].typename = "UDPBasicApp"
+**.ueD2DTx_vid[*].udpApp[0].destAddresses = "ueD2DRx_vid[" + string(ancestorIndex(1)) + "]"
+**.ueD2DTx_vid[*].udpApp[0].destPort = 5000
+**.ueD2DTx_vid[*].udpApp[0].sendInterval = 1s 
+**.ueD2DTx_vid[*].udpApp[0].messageLength = 30250B # 242kbps
+# D2D video receivers.
+**.ueD2DRx_vid[*].udpApp[0].typename = "UDPSink"
+**.ueD2DRx_vid[*].udpApp[0].localPort = 5000
 
 
-### UDP VOICE-OVER-IP TRAFFIC ###
-[Config TrafficUDPVoIP]
-extends = Base
-*.ue*[*].numUdpApps = 1
-
-*.ueCell[*].udpApp[*].typename = "VoIPSender"
-*.ueCell[*].udpApp[*].localPort = 3088+ancestorIndex(0) 
-*.ueCell[*].udpApp[*].startTime = uniform(0s,0.02s)
-*.ueCell[*].udpApp[*].destAddress = "VoIPServer"
-*.ueCell[*].udpApp[*].destPort = 1000
-
-*.ueD2DTx[*].udpApp[*].typename = "VoIPSender"
-*.ueD2DTx[*].udpApp[*].localPort = 3088+ancestorIndex(0) 
-*.ueD2DTx[*].udpApp[*].startTime = uniform(0s,0.02s)
-*.ueD2DTx[*].udpApp[*].destAddress = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
-*.ueD2DTx[*].udpApp[*].destPort = 1000
-# Receivers
-*.ueD2DRx[*].udpApp[*].typename = "VoIPReceiver"
-*.ueD2DRx[*].udpApp[*].localPort = 1000
-**.VoIPServer.udpApp[0].typename = "VoIPReceiver"
-**.VoIPServer.udpApp[0].localPort = 1000
-
-*.ueD2DTx[*].lteNic.d2dPeerAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
-*.ueD2DRx[*].lteNic.d2dPeerAddresses = "ueD2DTx[" + string(ancestorIndex(1)) + "]"
-
-# Mixed traffic: VoIP + CBR, both D2D and cellular.
-[Config TrafficMixed]
-extends = Base
-*.numUeCell = 5
-*.numUeD2DTx = 4
-*.numUeD2DRx = 4
-
-# 3 VoIP senders.
-*.ueCell[*].numUdpApps = 1
-*.ueCell[0..2].udpApp[0].typename = "VoIPSender"
-*.ueCell[0..2].udpApp[0].localPort = 3088+ancestorIndex(0) 
-*.ueCell[0..2].udpApp[0].startTime = uniform(0s,0.02s)
-*.ueCell[0..2].udpApp[0].destAddress = "VoIPServer"
-*.ueCell[0..2].udpApp[0].destPort = 1000
+#### UDP FULL BUFFER TRAFFIC ###
+#[Config TrafficUDPFullBuffer]
+#extends=Base
 #
-# 2 CBR users.
-**.ueCell[3..4].udpApp[0].typename = "UDPBasicApp"
-**.ueCell[3..4].udpApp[0].destAddresses = "CBRServer"
-**.ueCell[3..4].udpApp[0].destPort = 1000
-**.ueCell[3..4].udpApp[0].sendInterval = 0.25s 
-**.ueCell[3..4].udpApp[0].messageLength = 50B # 2kbps
-
-# VoIPServer as endpoint.
-**.VoIPServer.numUdpApps = 1
-**.VoIPServer.udpApp[0].typename = "VoIPReceiver"
-**.VoIPServer.udpApp[0].localPort = 1000
-# CBRServer as endpoint. One server with >1 UDPApps crashes.
-**.CBRServer.numUdpApps = 1
-**.CBRServer.udpApp[0].typename = "UDPSink"
-**.CBRServer.udpApp[0].localPort = 1000
-
-# 3 D2D VoIP users.
-*.ueD2DTx[*].numUdpApps = 1
-*.ueD2DRx[*].numUdpApps = 1
-*.ueD2DTx[0..2].udpApp[*].typename = "VoIPSender"
-*.ueD2DTx[0..2].udpApp[*].localPort = 3088+ancestorIndex(0) 
-*.ueD2DTx[0..2].udpApp[*].startTime = uniform(0s,0.02s)
-*.ueD2DTx[0..2].udpApp[*].destAddress = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
-*.ueD2DTx[0..2].udpApp[*].destPort = 1000
-# Receivers
-*.ueD2DRx[0..2].udpApp[*].typename = "VoIPReceiver"
-*.ueD2DRx[0..2].udpApp[*].localPort = 1000
-
-# 2 D2D CBR users.
-**.ueD2DTx[3].udpApp[0].typename = "UDPBasicApp"
-**.ueD2DTx[3].udpApp[0].destAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
-**.ueD2DTx[3].udpApp[0].destPort = 1000
-**.ueD2DTx[3].udpApp[0].sendInterval = 1s 
-**.ueD2DTx[3].udpApp[0].messageLength = 250B # 2kbps
-
-**.ueD2DRx[3].udpApp[0].typename = "UDPSink"
-**.ueD2DRx[3].udpApp[0].localPort = 1000
-
-### FTP VIA TCP TRAFFIC ###
-[Config TrafficTCPFTP]
-extends=Base
-
-*.ueD2D*[*].numTcpApps = 1
-
-*.ueD2DTx[*].tcpApp[*].typename = "TCPSessionApp"
-*.ueD2DTx[*].tcpApp[*].connectPort = 1000
-*.ueD2DTx[*].tcpApp[*].localPort = 1000
-*.ueD2DTx[*].tcpApp[*].sendBytes = 1GiB
-*.ueD2DTx[*].tcpApp[*].active = true
-*.ueD2DTx[*].tcpApp[*].tOpen = uniform(0.010s,0.1s)
-*.ueD2DTx[*].tcpApp[*].tSend = uniform(0.15s,0.5s)
-*.ueD2DTx[*].tcpApp[*].connectAddress = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
-*.ueD2DTx[*].tcpApp[*].localAddress = "ueD2DTx[" + string(ancestorIndex(1)) + "]"
-
-# Receivers
-*.ueD2DRx[*].tcpApp[*].typename = "TCPSinkApp"
-*.ueD2DRx[*].tcpApp[*].localPort = 1000
-
-*.ueD2DTx[*].lteNic.d2dPeerAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
-*.ueD2DRx[*].lteNic.d2dPeerAddresses = "ueD2DTx[" + string(ancestorIndex(1)) + "]"
-
-**.tcpApp[*].tClose = -1s
-
-
-
-
-[Config testIncreasingDistance]
-extends=TrafficUDPFullBuffer
-
-**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
-**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
-*.numUeD2DTx = 1
-*.numUeD2DRx = 1
-
-*.eNodeB.mobility.initialX = 300m
-*.eNodeB.mobility.initialY = 300m
-# Receiver is at (400,300).
-*.ueD2DRx[0].mobility.initialX = 400m
-*.ueD2DRx[0].mobility.initialY = 300m
-# Transmitter moves from 10m away to 100m away.
-*.ueD2DTx[0].mobility.initialX = ${d=410..500 step 10}m
-*.ueD2DTx[0].mobility.initialY = 300m
-output-scalar-file = ${resultdir}/${configname}/reused${d}-rep${repetition}.sca
-
-
-[Config ReuseTester]
-extends=TrafficUDPFullBuffer
-*.numUeD2DTx = 2
-*.numUeD2DRx = 2
-**.deployer.numRbDl = 5
-**.deployer.numRbUl = 5
-**.numBands = 5
-**.schedulingDisciplineUl = "REUSE_TESTER"
-**.schedulingDisciplineDl = "REUSE_TESTER"
-
-*.eNodeB.mobility.initialX = 300m
-*.eNodeB.mobility.initialY = 300m
-
-#*.ueD2D*[*].mobility.initialX = uniform(290m,310m)
-#*.ueD2D*[*].mobility.initialY = uniform(340m,350m)
-
-*.ueD2DTx[0].mobility.initialX = 300m
-*.ueD2DTx[0].mobility.initialY = 340m
-*.ueD2DRx[0].mobility.initialX = 300m 
-*.ueD2DRx[0].mobility.initialY = 390m # 50m from Tx
-
-*.ueD2DTx[1].mobility.initialX = 300m
-*.ueD2DTx[1].mobility.initialY = ${d=350..390 step 10}m # 10m -> 50m away from other pair
-*.ueD2DRx[1].mobility.initialX = 350m # 50m from Tx 
-*.ueD2DRx[1].mobility.initialY = ${d}m
-output-scalar-file = ${resultdir}/${configname}/d${d}-rep${repetition}.sca
-
-
-[Config AllocatorBestFitTester]
-extends=ReuseTester
-**.buildConflictGraph = true
-**.conflictGraphUpdatePeriod = 1s
-**.conflictGraphThreshold = -20   #dB
-**.schedulingDisciplineUl = "ALLOCATOR_BESTFIT"
-**.schedulingDisciplineDl = "ALLOCATOR_BESTFIT"
-
-#output-scalar-file = ${resultdir}/${configname}/rep${repetition}.sca
-
-
-[Config interferenceTester]
-extends=TrafficUDPFullBuffer
-*.numUeD2DTx = 10
-*.numUeD2DRx = 10
-**.deployer.numRbDl = 5
-**.deployer.numRbUl = 5
-**.numBands = 5
-**.schedulingDisciplineUl = "REUSE_TESTER"
-**.schedulingDisciplineDl = "REUSE_TESTER"
-
-*.ueD2DTx[1].mobility.initialX = 310m
-*.ueD2DTx[1].mobility.initialY = 300m
-*.ueD2DRx[1].mobility.initialX = 310m
-*.ueD2DRx[1].mobility.initialY = 310m
-
-*.ueD2DTx[2].mobility.initialX = 320m
-*.ueD2DTx[2].mobility.initialY = 300m
-*.ueD2DRx[2].mobility.initialX = 320m
-*.ueD2DRx[2].mobility.initialY = 310m
-
-*.ueD2DTx[3].mobility.initialX = 330m
-*.ueD2DTx[3].mobility.initialY = 300m
-*.ueD2DRx[3].mobility.initialX = 330m
-*.ueD2DRx[3].mobility.initialY = 310m
-
-*.ueD2DTx[4].mobility.initialX = 340m
-*.ueD2DTx[4].mobility.initialY = 300m
-*.ueD2DRx[4].mobility.initialX = 340m
-*.ueD2DRx[4].mobility.initialY = 310m
-
-*.ueD2DTx[5].mobility.initialX = 310m
-*.ueD2DTx[5].mobility.initialY = 315m
-*.ueD2DRx[5].mobility.initialX = 310m
-*.ueD2DRx[5].mobility.initialY = 325m
-
-*.ueD2DTx[6].mobility.initialX = 320m
-*.ueD2DTx[6].mobility.initialY = 315m
-*.ueD2DRx[6].mobility.initialX = 320m
-*.ueD2DRx[6].mobility.initialY = 325m
-
-*.ueD2DTx[7].mobility.initialX = 330m
-*.ueD2DTx[7].mobility.initialY = 315m
-*.ueD2DRx[7].mobility.initialX = 330m
-*.ueD2DRx[7].mobility.initialY = 325m
-
-*.ueD2DTx[8].mobility.initialX = 340m
-*.ueD2DTx[8].mobility.initialY = 315m
-*.ueD2DRx[8].mobility.initialX = 340m
-*.ueD2DRx[8].mobility.initialY = 325m
-
-*.ueD2DTx[9].mobility.initialX = 350m
-*.ueD2DTx[9].mobility.initialY = 315m
-*.ueD2DRx[9].mobility.initialX = 350m
-*.ueD2DRx[9].mobility.initialY = 325m
-
-*.ueD2DTx[0].mobility.initialX = ${d=325..465 step 20}m 
-*.ueD2DTx[0].mobility.initialY = 305m # 0m -> 150m away from the cluster
-*.ueD2DRx[0].mobility.initialX = ${d}m # 12m from Tx
-*.ueD2DRx[0].mobility.initialY = 317m
-output-scalar-file = ${resultdir}/${configname}/d${d}-rep${repetition}.sca
-
-
-[Config testRNGSeedInfluence]
-extends = TrafficUDPFullBuffer
-*.numUeD2DTx = 10
-*.numUeD2DRx = 10
-**.deployer.numRbDl = 50
-**.deployer.numRbUl = 50
-**.numBands = 50
-**.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
-**.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
-
-*.eNodeB.mobility.initialX = 300m
-*.eNodeB.mobility.initialY = 300m
-# Receiver is at (400,300).
-*.ueD2DRx[0].mobility.initialX = 400m
-*.ueD2DRx[0].mobility.initialY = 300m
-*.ueD2DTx[0].mobility.initialX = 410m # 10m away
-*.ueD2DTx[0].mobility.initialY = 300m
-
-*.ueD2DRx[1].mobility.initialX = 400m
-*.ueD2DRx[1].mobility.initialY = 350m
-*.ueD2DTx[1].mobility.initialX = 420m # 20m away
-*.ueD2DTx[1].mobility.initialY = 350m
-
-*.ueD2DRx[2].mobility.initialX = 400m
-*.ueD2DRx[2].mobility.initialY = 400m
-*.ueD2DTx[2].mobility.initialX = 430m # 30m away
-*.ueD2DTx[2].mobility.initialY = 400m
-
-*.ueD2DRx[3].mobility.initialX = 400m
-*.ueD2DRx[3].mobility.initialY = 450m
-*.ueD2DTx[3].mobility.initialX = 440m # 40m away
-*.ueD2DTx[3].mobility.initialY = 450m
-
-*.ueD2DRx[4].mobility.initialX = 400m
-*.ueD2DRx[4].mobility.initialY = 500m
-*.ueD2DTx[4].mobility.initialX = 450m # 50m away
-*.ueD2DTx[4].mobility.initialY = 500m
-
-*.ueD2DRx[5].mobility.initialX = 400m
-*.ueD2DRx[5].mobility.initialY = 550m
-*.ueD2DTx[5].mobility.initialX = 460m # 60m away
-*.ueD2DTx[5].mobility.initialY = 550m
-
-*.ueD2DRx[6].mobility.initialX = 400m
-*.ueD2DRx[6].mobility.initialY = 600m
-*.ueD2DTx[6].mobility.initialX = 470m # 70m away
-*.ueD2DTx[6].mobility.initialY = 600m
-
-*.ueD2DRx[7].mobility.initialX = 400m
-*.ueD2DRx[7].mobility.initialY = 650m
-*.ueD2DTx[7].mobility.initialX = 480m # 80m away
-*.ueD2DTx[7].mobility.initialY = 650m
-
-*.ueD2DRx[8].mobility.initialX = 400m
-*.ueD2DRx[8].mobility.initialY = 700m
-*.ueD2DTx[8].mobility.initialX = 490m # 90m away
-*.ueD2DTx[8].mobility.initialY = 700m
-
-*.ueD2DRx[9].mobility.initialX = 400m
-*.ueD2DRx[9].mobility.initialY = 750m
-*.ueD2DTx[9].mobility.initialX = 500m # 100m away
-*.ueD2DTx[9].mobility.initialY = 750m
-
-
-[Config testRNGSeedInfluencePF]
-extends = testRNGSeedInfluence
-**.schedulingDisciplineUl = "PF"
-**.schedulingDisciplineDl = "PF"
+#*.ue*[*].numUdpApps = 1
+#
+#**.ueCell[*].udpApp[0].typename = "UDPBasicApp"
+#**.ueCell[*].udpApp[0].destAddresses = "CBRServer"
+#**.ueCell[*].udpApp[0].destPort = 1000
+#**.ueCell[*].udpApp[0].sendInterval = 0.0005s # 2 packets per TTI = full buffer
+#**.ueCell[*].udpApp[0].messageLength = 50B  # <576B from RFC1122
+#
+#**.ueD2DTx[*].udpApp[0].typename = "UDPBasicApp"
+#**.ueD2DTx[*].udpApp[*].destAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
+#**.ueD2DTx[*].lteNic.d2dPeerAddresses = "ueD2DRx[" + string(ancestorIndex(1)) + "]"
+#**.ueD2DTx[*].udpApp[0].destPort = 1000
+#**.ueD2DTx[*].udpApp[0].sendInterval = 0.0005s # 2 packets per TTI = full buffer
+#**.ueD2DTx[*].udpApp[0].messageLength = 50B  # <576B from RFC1122
+#
+#**.ueD2DRx[*].udpApp[0].typename = "UDPSink"
+#**.ueD2DRx[*].udpApp[0].localPort = 1000
+#
+#**.CBRServer.numUdpApps = 1
+#**.CBRServer.udpApp[0].typename = "UDPSink"
+#**.CBRServer.udpApp[0].localPort = 1000
 
 
 [Config tuGameTest]
-extends = TrafficMixed
+extends = Base
 
-**.deployer.numRbDl = 6
-**.deployer.numRbUl = 6
-**.numBands = 6
+*.numUeCellTx_CBR = 10
+*.numUeCellRx_CBR = 10
+*.numUeCellTx_VoIP = 15
+*.numUeCellRx_VoIP = 15
+*.numUeCellTx_vid = 0
+*.numUeCellRx_vid = 0
+
+*.numUeD2DTx_CBR = 10
+*.numUeD2DRx_CBR = 10
+*.numUeD2DTx_VoIP = 15
+*.numUeD2DRx_VoIP = 15
+*.numUeD2DTx_vid = 0
+*.numUeD2DRx_vid = 0
+
+**.numBands = ${numRBs = 6}
+**.deployer.numRbDl = ${numRBs}
+**.deployer.numRbUl = ${numRBs}
+
 
 **.schedulingDisciplineUl = "TU_GAME"
 **.schedulingDisciplineDl = "TU_GAME"
 
-*.eNodeB.mobility.initialX = 300m
-*.eNodeB.mobility.initialY = 300m
-*.ue*[*].mobility.initialX = uniform(290m,310m)
-*.ue*[*].mobility.initialY = uniform(340m,350m)
+#*.eNodeB.mobility.initialX = 300m
+#*.eNodeB.mobility.initialY = 300m
+#*.ueD2DRx*[*].mobility.initialX = 350m
+#*.ueD2DRx*[*].mobility.initialY = 300m
+#*.ueD2DTx*[*].mobility.initialX = 340m # 10m away
+#*.ueD2DTx*[*].mobility.initialY = 300m
+#*.ueCell*[*].mobility.initialX = 250m # 50m from eNB
+#*.ueCell*[*].mobility.initialY = 300m
 
 
 [Config tuGameTestComparisonRR]
-extends = TrafficMixed
+extends = tuGameTest
 **.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
 **.schedulingDisciplineDl = "NAIVE_ROUND_ROBIN"
 
 
 [Config tuGameTestComparisonPF]
-extends = TrafficMixed
+extends = tuGameTest
 **.schedulingDisciplineUl = "PF"
 **.schedulingDisciplineDl = "PF"
