prepared parameterStudy-p config

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -63,8 +63,10 @@ network=FrequencyNetwork
 *.eNodeB.mobility.initialX = 300m
 *.eNodeB.mobility.initialY = 300m
 
-*.ue*[*].mobility.initialX = uniform(275m,325m)
-*.ue*[*].mobility.initialY = uniform(325m,375m)
+*.ueCell*[*].mobility.initialX = uniform(275m,325m)
+*.ueCell*[*].mobility.initialY = uniform(325m,375m) # max ~70m distance
+*.ueD2D*[*].mobility.initialX = uniform(300m,325m)
+*.ueD2D*[*].mobility.initialY = uniform(350m,375m) # max ~35m distance
 
 ### Default scheduling discipline.
 **.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
@@ -88,20 +90,37 @@ network=FrequencyNetwork
 **.usePreconfiguredTxParams = false
 #**.d2dCqi = 7
 
-*.ue*[*].numUdpApps = 1
+*.ue*_VoIP[*].numUdpApps = 1
+*.ue*_vid[*].numUdpApps = 1
+*.ue*_CBR[*].numTcpApps = 1
 
-# Cellular CBR senders.
-**.ueCellTx_CBR[*].udpApp[0].typename = "UDPBasicApp"
-**.ueCellTx_CBR[*].udpApp[0].destAddresses = "ueCellRx_CBR[" + string(ancestorIndex(1)) + "]"
-**.ueCellTx_CBR[*].udpApp[0].destPort = 1000
-**.ueCellTx_CBR[*].udpApp[0].sendInterval = ${cbrSendInterval = 0.2s}
-**.ueCellTx_CBR[*].udpApp[0].messageLength = ${cbrPacketSize = 50B} # 2kbps
-# Cellular CBR receivers.
-**.ueCellRx_CBR[*].udpApp[0].typename = "UDPSink"
-**.ueCellRx_CBR[*].udpApp[0].localPort = 1000
+# CBR senders.
+**.ue*Tx_CBR[*].tcpApp[*].typename = "TCPSessionApp"
+**.ue*Tx_CBR[*].tcpApp[0].connectPort = 1000
+**.ue*Tx_CBR[*].tcpApp[*].localPort = 1000
+**.ue*Tx_CBR[*].tcpApp[*].sendBytes = 1GiB
+**.ue*Tx_CBR[*].tcpApp[0].active = true
+**.ue*Tx_CBR[*].tcpApp[0].tOpen = 0.01s 
+**.ue*Tx_CBR[*].tcpApp[0].tSend = 1ms 
+**.ueCellTx_CBR[*].tcpApp[0].connectAddress = "ueCellRx_CBR[" + string(ancestorIndex(1)) + "]"
+**.ueCellTx_CBR[*].tcpApp[0].localAddress = "ueCellRx_CBR[" + string(ancestorIndex(1)) + "]"
+**.ueD2DTx_CBR[*].tcpApp[0].connectAddress = "ueD2DRx_CBR[" + string(ancestorIndex(1)) + "]"
+**.ueD2DTx_CBR[*].tcpApp[0].localAddress = "ueD2DRx_CBR[" + string(ancestorIndex(1)) + "]"
+ 
+# CBR receivers
+**.ue*Rx_CBR[*].tcpApp[0].typename = "TCPSinkApp"
+**.ue*Rx_CBR[*].tcpApp[0].localPort = 1000
+
+#**.ueCellTx_CBR[*].udpApp[0].typename = "UDPBasicApp"
+#**.ueCellTx_CBR[*].udpApp[0].destAddresses = "ueCellRx_CBR[" + string(ancestorIndex(1)) + "]"
+#**.ueCellTx_CBR[*].udpApp[0].destPort = 1000
+#**.ueCellTx_CBR[*].udpApp[0].sendInterval = ${cbrSendInterval = 0.2s}
+#**.ueCellTx_CBR[*].udpApp[0].messageLength = ${cbrPacketSize = 50B} # 2kbps
+## Cellular CBR receivers.
+
 
 # Cellular VoIP senders.
-*.ueCellTx_VoIP[*].udpApp[0].typename = "VoIPSender"
+*.ueTx_VoIP[*].udpApp[0].typename = "VoIPSender"
 *.ueCellTx_VoIP[*].udpApp[0].localPort = 3088 
 *.ueCellTx_VoIP[*].udpApp[0].startTime = uniform(0s,0.02s)
 *.ueCellTx_VoIP[*].udpApp[0].destAddress = "ueCellRx_VoIP[" + string(ancestorIndex(1)) + "]"
@@ -122,14 +141,14 @@ network=FrequencyNetwork
 
 
 # D2D CBR senders.
-**.ueD2DTx_CBR[*].udpApp[0].typename = "UDPBasicApp"
-**.ueD2DTx_CBR[*].udpApp[0].destAddresses = "ueD2DRx_CBR[" + string(ancestorIndex(1)) + "]"
-**.ueD2DTx_CBR[*].udpApp[0].destPort = 1000
-**.ueD2DTx_CBR[*].udpApp[0].sendInterval = ${cbrSendInterval}
-**.ueD2DTx_CBR[*].udpApp[0].messageLength = ${cbrPacketSize} # 2kbps
+#**.ueD2DTx_CBR[*].udpApp[0].typename = "UDPBasicApp"
+#**.ueD2DTx_CBR[*].udpApp[0].destAddresses = "ueD2DRx_CBR[" + string(ancestorIndex(1)) + "]"
+#**.ueD2DTx_CBR[*].udpApp[0].destPort = 1000
+#**.ueD2DTx_CBR[*].udpApp[0].sendInterval = ${cbrSendInterval}
+#**.ueD2DTx_CBR[*].udpApp[0].messageLength = ${cbrPacketSize} # 2kbps
 # D2D CBR receivers.
-**.ueD2DRx_CBR[*].udpApp[0].typename = "UDPSink"
-**.ueD2DRx_CBR[*].udpApp[0].localPort = 1000
+#**.ueD2DRx_CBR[*].udpApp[0].typename = "UDPSink"
+#**.ueD2DRx_CBR[*].udpApp[0].localPort = 1000
 
 # D2D VoIP senders.
 *.ueD2DTx_VoIP[*].udpApp[0].typename = "VoIPSender"
@@ -224,3 +243,27 @@ extends = tuGameTest
 extends = tuGameTest
 **.schedulingDisciplineUl = "PF"
 **.schedulingDisciplineDl = "PF"
+
+
+[Config parameterStudy-p]
+extends = Base
+*.numUeCellTx_CBR = 5
+*.numUeCellRx_CBR = 5
+*.numUeCellTx_VoIP = 0
+*.numUeCellRx_VoIP = 0
+*.numUeCellTx_vid = 0
+*.numUeCellRx_vid = 0
+
+*.numUeD2DTx_CBR = 5
+*.numUeD2DRx_CBR = 5
+*.numUeD2DTx_VoIP = 0
+*.numUeD2DRx_VoIP = 0
+*.numUeD2DTx_vid = 0
+*.numUeD2DRx_vid = 0
+
+**.schedulingDisciplineUl = "TU_GAME"
+**.schedulingDisciplineDl = "TU_GAME"
+
+*.oracle.d2dPenalty = ${p=0..1 step 0.1}
+output-scalar-file = ${resultdir}/${configname}/p${p}_rep${repetition}.sca
+output-vector-file = ${resultdir}/${configname}/p${p}_rep${repetition}.vec
