fixed positions for parameterStudy-p config

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -261,6 +261,57 @@ extends = Base
 *.numUeD2DTx_vid = 0
 *.numUeD2DRx_vid = 0
 
+*.ueCellTx_CBR[0].mobility.initialX = 275m
+*.ueCellTx_CBR[0].mobility.initialY = 275m
+*.ueCellRx_CBR[0].mobility.initialX = 325m 
+*.ueCellRx_CBR[0].mobility.initialY = 325m
+
+*.ueCellTx_CBR[1].mobility.initialX = 275m
+*.ueCellTx_CBR[1].mobility.initialY = 285m
+*.ueCellRx_CBR[1].mobility.initialX = 325m
+*.ueCellRx_CBR[1].mobility.initialY = 335m
+
+*.ueCellTx_CBR[2].mobility.initialX = 275m
+*.ueCellTx_CBR[2].mobility.initialY = 295m
+*.ueCellRx_CBR[2].mobility.initialX = 325m
+*.ueCellRx_CBR[2].mobility.initialY = 345m
+
+*.ueCellTx_CBR[3].mobility.initialX = 275m
+*.ueCellTx_CBR[3].mobility.initialY = 265m
+*.ueCellRx_CBR[3].mobility.initialX = 325m
+*.ueCellRx_CBR[3].mobility.initialY = 315m
+
+*.ueCellTx_CBR[4].mobility.initialX = 275m
+*.ueCellTx_CBR[4].mobility.initialY = 255m
+*.ueCellRx_CBR[4].mobility.initialX = 325m
+*.ueCellRx_CBR[4].mobility.initialY = 305m
+
+
+*.ueD2DTx_CBR[0].mobility.initialX = 200m
+*.ueD2DTx_CBR[0].mobility.initialY = 275m
+*.ueD2DRx_CBR[0].mobility.initialX = 220m 
+*.ueD2DRx_CBR[0].mobility.initialY = 275m
+
+*.ueD2DTx_CBR[1].mobility.initialX = 210m
+*.ueD2DTx_CBR[1].mobility.initialY = 265m
+*.ueD2DRx_CBR[1].mobility.initialX = 235m 
+*.ueD2DRx_CBR[1].mobility.initialY = 265m
+
+*.ueD2DTx_CBR[2].mobility.initialX = 220m
+*.ueD2DTx_CBR[2].mobility.initialY = 255m
+*.ueD2DRx_CBR[2].mobility.initialX = 250m 
+*.ueD2DRx_CBR[2].mobility.initialY = 255m
+
+*.ueD2DTx_CBR[3].mobility.initialX = 230m
+*.ueD2DTx_CBR[3].mobility.initialY = 245m
+*.ueD2DRx_CBR[3].mobility.initialX = 265m 
+*.ueD2DRx_CBR[3].mobility.initialY = 245m
+
+*.ueD2DTx_CBR[4].mobility.initialX = 240m
+*.ueD2DTx_CBR[4].mobility.initialY = 235m
+*.ueD2DRx_CBR[4].mobility.initialX = 280m 
+*.ueD2DRx_CBR[4].mobility.initialY = 235m
+
 **.schedulingDisciplineUl = "TU_GAME"
 **.schedulingDisciplineDl = "TU_GAME"
 
