evaluated d2d penalty p; prepared d2dVsCell config to find out why cellular flows push out so much more data

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -4,7 +4,7 @@ tkenv-plugin-path = ../../../inet/etc/plugins
 output-scalar-file-append = false
 debug-on-errors = false
 tkenv-default-config =
-sim-time-limit=60s
+sim-time-limit=10s
 warmup-period=0s
 repeat = 20
 **.routingRecorder.enabled = false
@@ -65,8 +65,8 @@ network=FrequencyNetwork
 
 *.ueCell*[*].mobility.initialX = uniform(275m,325m)
 *.ueCell*[*].mobility.initialY = uniform(325m,375m) # max ~70m distance
-*.ueD2D*[*].mobility.initialX = uniform(300m,325m)
-*.ueD2D*[*].mobility.initialY = uniform(350m,375m) # max ~35m distance
+*.ueD2D*[*].mobility.initialX = uniform(290m,310m)
+*.ueD2D*[*].mobility.initialY = uniform(340m,350m)
 
 ### Default scheduling discipline.
 **.schedulingDisciplineUl = "NAIVE_ROUND_ROBIN"
@@ -247,8 +247,8 @@ extends = tuGameTest
 
 [Config parameterStudy-p]
 extends = Base
-*.numUeCellTx_CBR = 0
-*.numUeCellRx_CBR = 0
+*.numUeCellTx_CBR = 1
+*.numUeCellRx_CBR = 1
 *.numUeCellTx_VoIP = 0
 *.numUeCellRx_VoIP = 0
 *.numUeCellTx_vid = 0
@@ -318,3 +318,27 @@ extends = Base
 *.oracle.d2dPenalty = ${p=0..1 step 0.1}
 output-scalar-file = ${resultdir}/${configname}/p${p}_rep${repetition}.sca
 output-vector-file = ${resultdir}/${configname}/p${p}_rep${repetition}.vec
+
+
+[Config d2dVsCell]
+extends = Base
+*.numUeCellTx_CBR = 1
+*.numUeCellRx_CBR = 1
+*.numUeD2DTx_CBR = 1
+*.numUeD2DRx_CBR = 1
+
+*.eNodeB.mobility.initialX = 300m
+*.eNodeB.mobility.initialY = 300m
+
+*.ueD2DTx_CBR[0].mobility.initialX = 350m
+*.ueD2DTx_CBR[0].mobility.initialY = 350m
+*.ueD2DRx_CBR[0].mobility.initialX = 350m + ${d=10..50 step 10}m 
+*.ueD2DRx_CBR[0].mobility.initialY = 350m
+
+*.ueCellTx_CBR[0].mobility.initialX = 300m - ${d}m
+*.ueCellTx_CBR[0].mobility.initialY = 300m
+*.ueCellRx_CBR[0].mobility.initialX = 310m
+*.ueCellRx_CBR[0].mobility.initialY = 300m
+
+**.vector-recording = false
+output-scalar-file = ${resultdir}/${configname}/d${d}_rep${repetition}.sca
