implemented PropFair scheduler

--- a/frequency-reuse/omnetpp.ini
+++ b/frequency-reuse/omnetpp.ini
@@ -342,3 +342,11 @@ extends = Base
 
 **.vector-recording = false
 output-scalar-file = ${resultdir}/${configname}/d${d}_rep${repetition}.sca
+
+**.schedulingDisciplineUl = "TU_GAME"
+**.schedulingDisciplineDl = "TU_GAME"
+
+[Config d2dVsCellPF]
+extends = d2dVsCell
+**.schedulingDisciplineUl = "PROPFAIR"
+**.schedulingDisciplineDl = "PROPFAIR"
